# FlowPilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
docs/: references.md  spec.md  testing.md
extensions/chrome/: content.js  manifest.json  popup.html  popup.js  widget.js
fixtures/react-site/: index.html  react-dev-home.html
src/ui_bot/: agent.py  browser.py  config.py  llm.py  main.py  models.py  storage.py
src/ui_bot/static/: widget.js
tests/: test_agent.py  test_config.py  test_extension.py  test_llm.py  test_storage.py
